# TextEmbed-Book-RecSys

./: .gitignore  README.md  pyproject.toml
configs/experiments/: exp_bge_text_concat_v1.yaml  exp_bge_title_author_categories_v1.yaml  exp_bge_weighted_v1.yaml
configs/experiments/other/: exp_bge_text_concat_v1.yaml  exp_bge_weighted_v1.yaml
configs/experiments/tac/: exp_bge_tac.yaml  exp_multilingual_e5_large_instruct_tac.yaml  exp_nvidia_llama_embed_nemotron_8b_tac.yaml  exp_qwen3_0_6b_tac.yaml  exp_qwen3_4b_tac.yaml  exp_qwen3_8b_tac.yaml
configs/tac/: exp_mxbai_embed_large_v1_tac.yaml
docs/: dev_guide.md
img/: results.csv  summary.json
reports/data_profile/: build_eval_u5_i5_report.json  build_items_subset_from_eval_u3_i5_report.json
scripts/baselines/: retrieve_baselines.py
scripts/data/: build_eval.py  build_interactions.py  build_items.py  build_items_subset_from_eval.py
scripts/eval/: plot_baseline_vs_embedding.py
src/embedding/: generate_item_embeddings.py
src/eval/: run_eval.py
src/retrieval/: review_item_neighbors.py
tests/: test_build_eval.py  test_build_items_subset_from_eval.py  test_generate_item_embeddings.py  test_plot_baseline_vs_embedding.py  test_retrieve_baselines.py  test_run_eval.py
